--- a/oooe/src/App.css
+++ b/oooe/src/App.css
@@ -24,39 +24,12 @@
     overflow: hidden;
   }
 
-  .form-container {
-    width: 80vw;
-    text-align: center;
-    position: relative;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-    max-height: 600px;
-    overflow-y: scroll;
-    
-    & h1 {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
-    
-    & .form {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      gap: 20px;
-      flex-flow: column wrap;
+  h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
 
-    }
-
-    & .buttons {
-      display: flex;
-      justify-content: left;
-      align-items: center;
-      margin-top: 20px;
-    }
-
-    & select,
+   select,
     textarea {
       width: 60px;
       padding: 8px;
@@ -67,7 +40,7 @@
       box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05); 
     }
 
-    & input[type="number"] {
+     input[type="number"] {
       width: 60px;
       padding: 8px;
       margin: 0 10px;
@@ -77,6 +50,48 @@
       font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; 
       box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05); 
     }
+  .container {
+    opacity: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+
+  .form-container {
+    pointer-events: none;
+    opacity: 0.5;
+    width: 70vw;
+    text-align: center;
+    position: relative;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    max-height: 600px;
+    overflow-y: scroll;
+    
+    & .form {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      gap: 20px;
+      flex-flow: column wrap;
+    }
+
+    & .buttons {
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      margin-top: 20px;
+    }
+
+    
   }
 .button {
     padding: 0.5rem; /* p-2 */
